German localisation update.
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@180 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/de.yml
+++ b/redmine_dmsf/config/locales/de.yml
@@ -131,39 +131,36 @@ de:
   :permission_browse_documents: "Durchforste Dateien"
   :permission_user_preferences: "Benutzereinstellungen"
   :permission_view_dmsf_files: "Betrachte Dateien"
-  :permission_folder_manipulation: "Folder manipulation"
-  :permission_file_manipulation: "File manipulation"
-  :permission_file_approval: "File approval"
+  :permission_folder_manipulation: "Ordner manipulation"
+  :permission_file_manipulation: "Datei manipulation"
+  :permission_file_approval: "Datei approval"
   :permission_force_file_unlock: "Erzwinge Aufhebung der Dateisperre"
   :label_file: "Datei"
   :field_folder: "Ordner"
   :error_create_cycle_in_folder_dependency: "schaffen Zyklus in Abhängigkeit Ordner"
   :error_contains_invalid_character: "enthält ungültige Zeichen"
-
-# Not translated
-  :error_file_commit_require_uploaded_file: "File commit require uploaded file"
-  :warning_some_files_were_not_commited: "Some files were not commited due to validation errors: %{files}"
-  :error_user_has_not_right_delete_folder: "User hasn't right to delete forders"
-  :error_user_has_not_right_delete_file: "User hasn't right to delete file"
-  :notice_entries_deleted: "Entries deleted"
-  :warning_some_entries_were_not_deleted: "Some entries weren't deleted: %{entries}"
-  :question_do_you_really_want_to_delete_entries: "Do you really want to delete checked entries?"
-  :title_delete_checked: "Delete checked"
-  :title_number_of_files_in_directory: "Number of files in directory"
-  :title_filename_for_download: "Filename used for download or in Zip archive"
-  :label_number_of_folders: "Folders"
-  :label_number_of_documents: "Documents"
-  :label_zip_names_encoding: "Zip names encoding"
-  :note_zip_names_encoding_iconv: "Iconv is used for charset conversion from utf-8 to target encoding"
-  :error_file_storage_directory_does_not_exist: "File storage directory doesn't exist and can't be created"
-  :error_file_can_not_be_created: "File can't be created in storage directory"
-  :error_wrong_zip_encoding: "Wrong Zip encoding"
-  :warning_xapian_not_available: "Xapian not available"
+  :error_file_commit_require_uploaded_file: "Begehen einen Datei erfordet hochladene Datei"
+  :warning_some_files_were_not_commited: "Einige Dateien wurden nich begehen wegen Validation Fehlern: %{files}"
+  :error_user_has_not_right_delete_folder: "Der Nutzer hat kein Recht die Ordner zu löschen."
+  :error_user_has_not_right_delete_file: "Der Nutzer hat kein Recht die Datei zu löschen."
+  :notice_entries_deleted: "Aufnahmen löschen"
+  :warning_some_entries_were_not_deleted: "Enige Aufnahmen wurden nich gelöscht: %{entries}"
+  :question_do_you_really_want_to_delete_entries: "Willst du wirklich die gewählten Aufnahmen löschen?"
+  :title_delete_checked: "Lösch gewähltest"
+  :title_number_of_files_in_directory: "Dateizahl in dem Ordner"
+  :title_filename_for_download: "Dateiname benutzt zum Herunterladen oder ZIP-archivierung"
+  :label_number_of_folders: "Order"
+  :label_number_of_documents: "Documente"
+  :label_zip_names_encoding: "ZIP-namen Kodierung"
+  :note_zip_names_encoding_iconv: "Iconv ist benutzt zum Charset-konversion von utf-8 in Zielkodierung"
+  :error_file_storage_directory_does_not_exist: "Ordner zum Dateispeichern existiert nicht und kann nicht gebildet."
+  :error_file_can_not_be_created: "Datei kann nicht in dem gewählten Ordner gebildet werden."
+  :error_wrong_zip_encoding: "Falsche ZIP-kodierung"
+  :warning_xapian_not_available: "Xapian nicht zur Verfügung"
   :menu_dmsf: "DMSF"
-  :label_physical_file_delete: "Physical file delete"
-  :user_is_not_project_member: "You are not member of the project"
-  :heading_access_downloads_emails: "Downloads/Emails"
-  :heading_access_first: "First"
-  :heading_access_last: "Last"
-  :label_dmsf_updated: "DMSF updated"
+  :label_physical_file_delete: "Physisches Dateilöschen"
+  :user_is_not_project_member: "Du bist kein Projektmitglied"
+  :heading_access_downloads_emails: "Herunterladene/Emails"
+  :heading_access_first: "Erste"
+  :heading_access_last: "Letzte"
   
