* added Japanese translation
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@188 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/ja.yml
+++ b/redmine_dmsf/config/locales/ja.yml
@@ -1,116 +1,116 @@
-en:
+ja:
   :dmsf: "DMSF"
-  :label_dmsf_file_plural: "Dmsf files"
-  :warning_no_entries_selected: "No entries selected"
-  :error_email_to_must_be_entered: "Email To must be entered"
-  :notice_email_sent: "Email sent"
-  :warning_file_already_locked: "File already locked"
-  :notice_file_locked: "File locked"
-  :warning_file_not_locked: "File not locked"
-  :notice_file_unlocked: "File unlocked"
-  :error_only_user_that_locked_file_can_unlock_it: "Only user that locked file can unlock it"
-  :question_do_you_really_want_to_delete_this_entry: "Do you really want to delete this entry?"
-  :error_max_files_exceeded: "Limit for %{number} simultaneously downloaded files exceeded"
-  :question_do_you_really_want_to_delete_this_revision: "Do you really want to delete this revision?"
-  :error_entry_project_does_not_match_current_project: "Entry project doesn't match current project"
-  :notice_folder_created: "Folder created"
-  :error_folder_creation_failed: "Folder creation failed"
-  :error_folder_title_must_be_entered: "Title must be entered"
-  :notice_folder_deleted: "Folder deleted"
-  :error_folder_is_not_empty: "Folder is not empty"
-  :error_folder_title_is_already_used: "Title is already used"
-  :notice_folder_details_were_saved: "Folder details were saved"
-  :error_file_is_locked: "File is locked"
-  :notice_file_deleted: "File deleted"
-  :error_at_least_one_revision_must_be_present: "At least one revision must be present"
-  :notice_revision_deleted: "Revision deleted"
-  :warning_one_of_files_locked: "One of files locked"
-  :notice_file_unlocked: "File unlocked"
-  :notice_file_revision_created: "File revision created"
-  :notice_your_preferences_were_saved: "Your preferences were saved"
-  :warning_folder_notifications_already_activated: "Folder notifications already activated"
-  :notice_folder_notifications_activated: "Folder notifications activated"
-  :warning_folder_notifications_already_deactivated: "Folder notifications already deactivated"
-  :notice_folder_notifications_deactivated: "Folder notifications deactivated"
-  :warning_file_notifications_already_activated: "File notifications already activated"
-  :notice_file_notifications_activated: "File notifications activated"
-  :warning_file_notifications_already_deactivated: "File notifications already deactivated"
-  :notice_file_notifications_deactivated: "File notifications deactivated"
-  :link_details: "%{title} details"
-  :link_edit: "Edit %{title}"
-  :submit_create: "Create"
-  :link_create_folder: "Create folder"
-  :title_check_uncheck_all_for_zip_download_or_email: "Check/Uncheck all for zip download or email"
-  :link_title: "Title"
-  :link_size: "Size"
-  :link_modified: "Modified"
-  :link_ver: "Ver."
-  :link_author: "Author"
-  :title_check_for_zip_download_or_email: "Check for Zip download or email"
-  :title_delete: "Delete"
-  :title_notifications_active_deactivate: "Notifications active: Deactivate"
-  :title_notifications_not_active_activate: "Notifications not active: Activate"
-  :title_title_version_version_download: "%{title} version %{version} download"
-  :title_locked_by_user: "Locked by %{user}"
-  :title_locked_by_you: "Locked by you"
-  :title_waiting_for_approval: "Waiting for Approval"
-  :title_approved: "Approved"
-  :title_unlock_file: "Unlock to allow changes for other members"
-  :title_lock_file: "Lock to prevent changes for other members"
-  :submit_download: "Download"
-  :title_download_checked: "Download checked in Zip archive"
-  :submit_email: "Email"
-  :title_send_checked_by_email: "Send checked by email"
-  :link_user_preferences: "Your DMSF project preferences"
-  :heading_send_documents_by_email: "Send documents by email"
+  :label_dmsf_file_plural: "Dmsf ファイル"
+  :warning_no_entries_selected: "エントリーが選ばれていません"
+  :error_email_to_must_be_entered: "電子メールの To 先は省略できません"
+  :notice_email_sent: "電子メールを送信しました"
+  :warning_file_already_locked: "ファイルは既にロックされています"
+  :notice_file_locked: "ファイルをロックしました"
+  :warning_file_not_locked: "ファイルはロックされていません"
+  :notice_file_unlocked: "ファイルをロック解除しました"
+  :error_only_user_that_locked_file_can_unlock_it: "ファイルをロックしたユーザだけがロック解除できます"
+  :question_do_you_really_want_to_delete_this_entry: "本当にこのエントリーを削除しますか？"
+  :error_max_files_exceeded: "同時にダウンロードできるファイル数の上限 %{number} を超えています"
+  :question_do_you_really_want_to_delete_this_revision: "本当にこのリビジョンを削除しますか？"
+  :error_entry_project_does_not_match_current_project: "指定したプロジェクトは現在のプロジェクトと一致しません"
+  :notice_folder_created: "フォルダを作成しました"
+  :error_folder_creation_failed: "フォルダを作成できません"
+  :error_folder_title_must_be_entered: "タイトルが必要です"
+  :notice_folder_deleted: "フォルダを削除しました"
+  :error_folder_is_not_empty: "フォルダが空ではありません"
+  :error_folder_title_is_already_used: "タイトルは既に使われています"
+  :notice_folder_details_were_saved: "フォルダの詳細を保存しました"
+  :error_file_is_locked: "ファイルはロックされています"
+  :notice_file_deleted: "ファイルを削除しました"
+  :error_at_least_one_revision_must_be_present: "少なくとも１つのリビジョンが必要です"
+  :notice_revision_deleted: "リビジョンを削除しました"
+  :warning_one_of_files_locked: "ファイルのうちの１つがロックされています"
+  :notice_file_unlocked: "ファイルをロック解除しました"
+  :notice_file_revision_created: "ファイルのリビジョンを作成しました"
+  :notice_your_preferences_were_saved: "あなたの設定を保存しました"
+  :warning_folder_notifications_already_activated: "フォルダ通知は既に有効です"
+  :notice_folder_notifications_activated: "フォルダ通知を有効にしました"
+  :warning_folder_notifications_already_deactivated: "フォルダ通知は既に無効です"
+  :notice_folder_notifications_deactivated: "フォルダ通知を無効にしました"
+  :warning_file_notifications_already_activated: "ファイル通知は既に有効です"
+  :notice_file_notifications_activated: "ファイル通知を有効にしました"
+  :warning_file_notifications_already_deactivated: "ファイル通知は既に無効です"
+  :notice_file_notifications_deactivated: "ファイル通知を無効にしました"
+  :link_details: "%{title} の詳細を表示します"
+  :link_edit: "%{title} を編集します"
+  :submit_create: "作成"
+  :link_create_folder: "フォルダを作成します"
+  :title_check_uncheck_all_for_zip_download_or_email: "すべての Zip ダウンロードまたは電子メールのチェックをオン/オフします"
+  :link_title: "タイトル"
+  :link_size: "サイズ"
+  :link_modified: "更新日時"
+  :link_ver: "バージョン"
+  :link_author: "作成者"
+  :title_check_for_zip_download_or_email: "Zip ダウンロードまたは電子メールをチェックします"
+  :title_delete: "削除します"
+  :title_notifications_active_deactivate: "通知は有効です: 無効にする"
+  :title_notifications_not_active_activate: "通知は無効です: 有効にする"
+  :title_title_version_version_download: "%{title} のバージョン %{version} をダウンロードします"
+  :title_locked_by_user: "%{user} によってロックされています"
+  :title_locked_by_you: "あなたがロックしています"
+  :title_waiting_for_approval: "承認待ち"
+  :title_approved: "承認済み"
+  :title_unlock_file: "ロック解除して他のメンバーの変更を許可します"
+  :title_lock_file: "ロックして他のメンバーの変更を禁止します"
+  :submit_download: "ダウンロード"
+  :title_download_checked: "チェックしたものを Zip アーカイブでダウンロードします"
+  :submit_email: "電子メール"
+  :title_send_checked_by_email: "チェックしたものを電子メールで送信します"
+  :link_user_preferences: "あなたの DMSF プロジェクト設定"
+  :heading_send_documents_by_email: "電子メールによる文書の送信"
   :label_email_from: "From"
   :label_email_to: "To"
   :label_email_cc: "CC"
-  :label_email_subject: "Subject"
-  :label_email_documents: "Documents"
-  :label_email_body: "Body"
-  :label_email_send: "Send"
-  :title_notifications_active: "Notifications active"
-  :label_file_size: "File size"
-  :heading_file_upload: "Upload"
-  :note_uploaded_maximum_files_at_once: "There can be uploaded maximum of %{number} files at once."
-  :note_upload_files_greater_than_two_gb: "To upload files greater than 2GB you must have 64b browser."
-  :submit_upload_files: "Upload"
-  :heading_new_folder: "New Folder"
-  :label_title: "Title"
-  :label_description: "Description"
-  :submit_save: "Save"
-  :info_file_locked: "File locked!"
-  :label_notifications: "Notifications"
-  :select_option_default: "Default"
-  :select_option_deactivated: "Deactivated"
-  :select_option_activated: "Activated"
-  :title_save_preferences: "Save preferences"
-  :heading_revisions: "Revisions"
-  :title_download: "Download"
-  :title_delete_revision: "Delete revision"
-  :label_created: "Created"
-  :label_changed: "Changed"
-  :info_changed_by_user: "%{changed} by %{user}"
-  :label_filename: "Filename"
-  :label_version: "Version"
-  :label_workflow: "Workflow"
-  :option_workflow_waiting_for_approval: "Waiting for approval"
-  :option_workflow_approved: "Approved"
-  :option_workflow_none: "None"
+  :label_email_subject: "表題"
+  :label_email_documents: "文書"
+  :label_email_body: "本文"
+  :label_email_send: "送信"
+  :title_notifications_active: "通知は有効です"
+  :label_file_size: "ファイルサイズ"
+  :heading_file_upload: "アップロード"
+  :note_uploaded_maximum_files_at_once: "最大 %{number} ファイルを一度にアップロードすることができます。"
+  :note_upload_files_greater_than_two_gb: "2GB より大きいファイルをアップロードするには 64bit 対応ブラウザが必要です。"
+  :submit_upload_files: "アップロード"
+  :heading_new_folder: "新規フォルダ"
+  :label_title: "タイトル"
+  :label_description: "説明"
+  :submit_save: "保存"
+  :info_file_locked: "ファイルをロックしました！"
+  :label_notifications: "通知"
+  :select_option_default: "既定値"
+  :select_option_deactivated: "無効"
+  :select_option_activated: "有効"
+  :title_save_preferences: "設定を保存します"
+  :heading_revisions: "リビジョン"
+  :title_download: "ダウンロードします"
+  :title_delete_revision: "リビジョンを削除します"
+  :label_created: "作成者/日時"
+  :label_changed: "更新者/日時"
+  :info_changed_by_user: "%{user} / %{changed}"
+  :label_filename: "ファイル名"
+  :label_version: "バージョン"
+  :label_workflow: "ワークフロー"
+  :option_workflow_waiting_for_approval: "承認待ち"
+  :option_workflow_approved: "承認済み"
+  :option_workflow_none: "なし"
   :label_mime: "Mime"
-  :label_size: "Size"
-  :label_comment: "Comment"
-  :heading_new_revision: "New Revision"
-  :option_version_same: "Same"
-  :option_version_minor: "Minor"
-  :option_version_major: "Major"
-  :label_new_content: "New content"
-  :label_maximum_files_upload: "Maximum files upload"
-  :note_maximum_number_of_files_uploaded: "Limits maximum number of files uploaded at once. 0 means unlimited."
-  :label_maximum_files_download: "Maximum files download"
-  :note_maximum_number_of_files_downloaded: "Limits maximum number of files downloaded in zip or sent via email. 0 means unlimited."
-  :label_file_storage_directory: "File storage directory"
+  :label_size: "サイズ"
+  :label_comment: "コメント"
+  :heading_new_revision: "新しいリビジョン"
+  :option_version_same: "変更なし"
+  :option_version_minor: "マイナー"
+  :option_version_major: "メジャー"
+  :label_new_content: "新規コンテンツ"
+  :label_maximum_files_upload: "最大ファイルアップロード数"
+  :note_maximum_number_of_files_uploaded: "一度にアップロードできるファイル数の上限。0は無制限。"
+  :label_maximum_files_download: "最大ファイルダウンロード数"
+  :note_maximum_number_of_files_downloaded: "Zip でダウンロードできる、または電子メールで送られるファイル数の上限。0は無制限。"
+  :label_file_storage_directory: "ファイル保存フォルダ"
   :label_index_database: "Index database"
   :label_stemming_language: "Stemming Language"
   :note_possible_values: "Possible values"
@@ -124,44 +124,42 @@ en:
   :note_stem_some: "Search for stemmed forms of terms except for those which start with a capital letter, or are followed by certain characters, or are used with operators which need positional information. Stemmed terms are prefixed with 'Z'."
   :note_stem_all: "Search for stemmed forms of all words (note: no 'Z' prefix is added)."
   :note_stemming_applied: "Note that the stemming algorithm is only applied to words in probabilistic fields - boolean filter terms are never stemmed."
-  :label_default_notifications: "File default notifications"
-  :heading_uploaded_files: "Uploaded Files"
-  :submit_commit: "Commit"
-  :link_documents: "Documents"
-  :permission_browse_documents: "Browse documents"
-  :permission_user_preferences: "User preferences"
-  :permission_view_dmsf_files: "View documents"
-  :permission_folder_manipulation: "Folder manipulation"
-  :permission_file_manipulation: "File manipulation"
-  :permission_file_approval: "File approval"
-  :permission_force_file_unlock: "Force file unlock"
-  :label_file: "File"
-  :field_folder: "Folder"
-  :error_create_cycle_in_folder_dependency: "create cycle in folder dependency"
-  :error_contains_invalid_character: "contains invalid character(s)"
-  :error_file_commit_require_uploaded_file: "File commit require uploaded file"
-  :warning_some_files_were_not_commited: "Some files were not commited due to validation errors: %{files}"
-  :error_user_has_not_right_delete_folder: "User hasn't right to delete forders"
-  :error_user_has_not_right_delete_file: "User hasn't right to delete file"
-  :notice_entries_deleted: "Entries deleted"
-  :warning_some_entries_were_not_deleted: "Some entries weren't deleted: %{entries}"
-  :question_do_you_really_want_to_delete_entries: "Do you really want to delete checked entries?"
-  :title_delete_checked: "Delete checked"
-  :title_number_of_files_in_directory: "Number of files in directory"
-  :title_filename_for_download: "Filename used for download or in Zip archive"
-  :label_number_of_folders: "Folders"
-  :label_number_of_documents: "Documents"
-  :label_zip_names_encoding: "Zip names encoding"
-  :note_zip_names_encoding_iconv: "Iconv is used for charset conversion from utf-8 to target encoding"
-  :error_file_storage_directory_does_not_exist: "File storage directory doesn't exist and can't be created"
-  :error_file_can_not_be_created: "File can't be created in storage directory"
-  :error_wrong_zip_encoding: "Wrong Zip encoding"
-  :warning_xapian_not_available: "Xapian not available"
+  :label_default_notifications: "ファイル通知の既定値"
+  :heading_uploaded_files: "アップロードされたファイル"
+  :submit_commit: "コミット"
+  :link_documents: "文書"
+  :permission_browse_documents: "文書の検索"
+  :permission_user_preferences: "ユーザ設定"
+  :permission_view_dmsf_files: "文書の表示"
+  :permission_folder_manipulation: "フォルダの操作"
+  :permission_file_manipulation: "ファイルの操作"
+  :permission_file_approval: "ファイルの承認"
+  :permission_force_file_unlock: "ファイルの強制ロック解除"
+  :label_file: "ファイル"
+  :field_folder: "フォルダ"
+  :error_create_cycle_in_folder_dependency: "フォルダの依存関係が循環しています"
+  :error_contains_invalid_character: "無効な文字を含んでいます"
+  :error_file_commit_require_uploaded_file: "コミットするには、まずファイルをアップロードしてください"
+  :warning_some_files_were_not_commited: "いくつかのファイルは、バリデーションエラーのためにコミットされませんでした: %{files}"
+  :error_user_has_not_right_delete_folder: "ユーザにフォルダを削除する権限がありません"
+  :error_user_has_not_right_delete_file: "ユーザにファイルを削除する権限がありません"
+  :notice_entries_deleted: "エントリーを削除しました"
+  :warning_some_entries_were_not_deleted: "いくつかのエントリーは削除されませんでした: %{entries}"
+  :question_do_you_really_want_to_delete_entries: "本当にチェックしたエントリーを削除しますか？"
+  :title_delete_checked: "チェックしたものを削除します"
+  :title_number_of_files_in_directory: "フォルダ内のファイル数"
+  :title_filename_for_download: "ファイル名はダウンロードまたは Zip アーカイブに使われます"
+  :label_number_of_folders: "フォルダ"
+  :label_number_of_documents: "文書"
+  :label_zip_names_encoding: "Zip 名のエンコード"
+  :note_zip_names_encoding_iconv: "文字コードを utf-8 から目的のエンコードに変換するのに Iconv が使われています"
+  :error_file_storage_directory_does_not_exist: "ファイル保存フォルダが存在せず作ることもできません"
+  :error_file_can_not_be_created: "ファイルを保存フォルダに作ることができません"
+  :error_wrong_zip_encoding: "Zip エンコーディングが正しくありません"
+  :warning_xapian_not_available: "Xapian が利用できる状態になっていません"
   :menu_dmsf: "DMSF"
-  :label_physical_file_delete: "Physical file delete"
-  :user_is_not_project_member: "You are not member of the project"
-  :heading_access_downloads_emails: "Downloads/Emails"
-  :heading_access_first: "First"
-  :heading_access_last: "Last"
-  :label_dmsf_updated: "DMSF updated"
-  
+  :label_physical_file_delete: "物理ファイルの削除"
+  :user_is_not_project_member: "あなたはプロジェクトのメンバーではありません"
+  :heading_access_downloads_emails: "ダウンロード/電子メール"
+  :heading_access_first: "初回アクセス"
+  :heading_access_last: "最終アクセス"
