* included info for folders
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@196 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -166,4 +166,5 @@ cs:
 
 # Not translated
   :label_dmsf_updated: "DMSF updated"
+  :title_total_size_of_all_files: "Total size of all files under this folder"
   
