--- a/redmine_dmsf/config/locales/es.yml
+++ b/redmine_dmsf/config/locales/es.yml
@@ -162,4 +162,5 @@ es:
   :heading_access_first: "First"
   :heading_access_last: "Last"
   :label_dmsf_updated: "DMSF updated"
+  :title_total_size_of_all_files: "Total size of all files under this folder"
   
