--- a/redmine_dmsf/config/locales/ru.yml
+++ b/redmine_dmsf/config/locales/ru.yml
@@ -160,4 +160,5 @@ ru:
   :heading_access_first: "First"
   :heading_access_last: "Last"
   :label_dmsf_updated: "DMSF updated"
+  :title_total_size_of_all_files: "Total size of all files under this folder"
   
