* finished Issue 117: revised ja.yml
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@203 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/ja.yml
+++ b/redmine_dmsf/config/locales/ja.yml
@@ -111,19 +111,19 @@ ja:
   :label_maximum_files_download: "最大ファイルダウンロード数"
   :note_maximum_number_of_files_downloaded: "Zip でダウンロードできる、または電子メールで送られるファイル数の上限。0は無制限。"
   :label_file_storage_directory: "ファイル保存フォルダ"
-  :label_index_database: "Index database"
-  :label_stemming_language: "Stemming Language"
-  :note_possible_values: "Possible values"
-  :note_pass_none_to_disable_stemming: "pass 'none' to disable stemming"
-  :label_stem_strategy: "Stem strategy"
-  :option_stem_none: "Stem none (default)"
+  :label_index_database: "インデックスデータベース"
+  :label_stemming_language: "語幹抽出する言語"
+  :note_possible_values: "取りうる値"
+  :note_pass_none_to_disable_stemming: "語幹抽出を無効にするには 'none' を設定します。"
+  :label_stem_strategy: "抽出方針"
+  :option_stem_none: "Stem none (既定値)"
   :option_stem_some: "Stem some"
   :option_stem_all: "Stem all"
-  :label_stemming_description: "This controls how the query parser will apply the stemming algorithm. The default value is STEM_NONE. The possible values are"
-  :note_do_not_stem: "Don't perform any stemming."
-  :note_stem_some: "Search for stemmed forms of terms except for those which start with a capital letter, or are followed by certain characters, or are used with operators which need positional information. Stemmed terms are prefixed with 'Z'."
-  :note_stem_all: "Search for stemmed forms of all words (note: no 'Z' prefix is added)."
-  :note_stemming_applied: "Note that the stemming algorithm is only applied to words in probabilistic fields - boolean filter terms are never stemmed."
+  :label_stemming_description: "クエリ解釈ルーチンがどのように語幹抽出アルゴリズムを適用するかを制御します。既定値は、STEM_NONE です。設定可能な値は次のものです。"
+  :note_do_not_stem: "語幹抽出しません。"
+  :note_stem_some: "大文字から始まる、特定の文字の後に続く、あるいは位置情報を必要とするオペレーターと共に使われる語を除くそれ以外の語の語幹を検索します。語幹抽出された語は、先頭に 'Z' が付きます。"
+  :note_stem_all: "すべての語の語幹を検索します。(注: 先頭に 'Z' は付きません。)"
+  :note_stemming_applied: "語幹抽出アルゴリズムは、確率を測る対象の位置にある語にしか適用できない (論理演算子の用語自体は語幹抽出されない) ことにご注意ください。"
   :label_default_notifications: "ファイル通知の既定値"
   :heading_uploaded_files: "アップロードされたファイル"
   :submit_commit: "コミット"
@@ -163,7 +163,4 @@ ja:
   :heading_access_downloads_emails: "ダウンロード/電子メール"
   :heading_access_first: "初回アクセス"
   :heading_access_last: "最終アクセス"
-
-#Not translated
-  :title_total_size_of_all_files: "Total size of all files under this folder"
-  
+  :title_total_size_of_all_files: "このフォルダにある全ファイルの合計サイズ"
